--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve --config 'webpack.config.dev.js'  --progress",
-    "test": "jest --watchAll --detectOpenHandles"
+    "test": "jest --watchAll --detectOpenHandles",
+    "build": "webpack --config 'webpack.config.prod.js'"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
@@ -32,6 +33,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.0",
     "dotenv-webpack": "^7.0.2",
     "eslint": "^7.22.0",
